-- ================================================
-- イミュータブルデータモデル DDL
-- 生成日時: 2026-01-10
-- ================================================

-- ================================================
-- リソーステーブル
-- ================================================

-- 顧客テーブル
CREATE TABLE CUSTOMER (
    CustomerID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    Name VARCHAR(100) NOT NULL,
    Address VARCHAR(255),
    Phone VARCHAR(20),
    CreatedAt TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP
);

COMMENT ON TABLE CUSTOMER IS '顧客';
COMMENT ON COLUMN CUSTOMER.CustomerID IS '顧客ID';
COMMENT ON COLUMN CUSTOMER.Name IS '顧客名';
COMMENT ON COLUMN CUSTOMER.Address IS '住所';
COMMENT ON COLUMN CUSTOMER.Phone IS '電話番号';
COMMENT ON COLUMN CUSTOMER.CreatedAt IS '作成日時';

-- 請求書テーブル
CREATE TABLE INVOICE (
    InvoiceID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    CustomerID INTEGER NOT NULL,
    InvoiceNumber VARCHAR(50) NOT NULL,
    IssueDate DATE NOT NULL,
    Amount NUMERIC(10,2) NOT NULL,
    DueDate DATE NOT NULL,
    CONSTRAINT FK_INVOICE_CUSTOMER FOREIGN KEY (CustomerID)
        REFERENCES CUSTOMER(CustomerID) ON DELETE RESTRICT
);

COMMENT ON TABLE INVOICE IS '請求書';
COMMENT ON COLUMN INVOICE.InvoiceID IS '請求書ID';
COMMENT ON COLUMN INVOICE.CustomerID IS '顧客ID';
COMMENT ON COLUMN INVOICE.InvoiceNumber IS '請求番号';
COMMENT ON COLUMN INVOICE.IssueDate IS '発行日';
COMMENT ON COLUMN INVOICE.Amount IS '請求金額';
COMMENT ON COLUMN INVOICE.DueDate IS '支払期日';

-- ================================================
-- イベントテーブル
-- ================================================

-- 請求書送付イベント
CREATE TABLE INVOICE_SEND (
    EventID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    InvoiceID INTEGER NOT NULL,
    CustomerID INTEGER NOT NULL,
    SendDateTime TIMESTAMP WITH TIME ZONE NOT NULL,
    SendMethod VARCHAR(50),
    CONSTRAINT FK_INVOICE_SEND_INVOICE FOREIGN KEY (InvoiceID)
        REFERENCES INVOICE(InvoiceID) ON DELETE RESTRICT,
    CONSTRAINT FK_INVOICE_SEND_CUSTOMER FOREIGN KEY (CustomerID)
        REFERENCES CUSTOMER(CustomerID) ON DELETE RESTRICT
);

COMMENT ON TABLE INVOICE_SEND IS '請求書送付イベント';
COMMENT ON COLUMN INVOICE_SEND.EventID IS 'イベントID';
COMMENT ON COLUMN INVOICE_SEND.InvoiceID IS '請求書ID';
COMMENT ON COLUMN INVOICE_SEND.CustomerID IS '顧客ID';
COMMENT ON COLUMN INVOICE_SEND.SendDateTime IS '送付日時';
COMMENT ON COLUMN INVOICE_SEND.SendMethod IS '送付方法';

-- 入金イベント
CREATE TABLE PAYMENT (
    PaymentID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    InvoiceID INTEGER NOT NULL,
    CustomerID INTEGER NOT NULL,
    PaymentDateTime TIMESTAMP WITH TIME ZONE NOT NULL,
    PaymentAmount NUMERIC(10,2) NOT NULL,
    PaymentMethod VARCHAR(50),
    CONSTRAINT FK_PAYMENT_INVOICE FOREIGN KEY (InvoiceID)
        REFERENCES INVOICE(InvoiceID) ON DELETE RESTRICT,
    CONSTRAINT FK_PAYMENT_CUSTOMER FOREIGN KEY (CustomerID)
        REFERENCES CUSTOMER(CustomerID) ON DELETE RESTRICT
);

COMMENT ON TABLE PAYMENT IS '入金イベント';
COMMENT ON COLUMN PAYMENT.PaymentID IS '入金ID';
COMMENT ON COLUMN PAYMENT.InvoiceID IS '請求書ID';
COMMENT ON COLUMN PAYMENT.CustomerID IS '顧客ID';
COMMENT ON COLUMN PAYMENT.PaymentDateTime IS '入金日時';
COMMENT ON COLUMN PAYMENT.PaymentAmount IS '入金額';
COMMENT ON COLUMN PAYMENT.PaymentMethod IS '入金方法';

-- 確認状送付イベント
CREATE TABLE CONFIRMATION_SEND (
    ConfirmationID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    InvoiceID INTEGER NOT NULL,
    CustomerID INTEGER NOT NULL,
    SendDateTime TIMESTAMP WITH TIME ZONE NOT NULL,
    SendMethod VARCHAR(50),
    CONSTRAINT FK_CONFIRMATION_SEND_INVOICE FOREIGN KEY (InvoiceID)
        REFERENCES INVOICE(InvoiceID) ON DELETE RESTRICT,
    CONSTRAINT FK_CONFIRMATION_SEND_CUSTOMER FOREIGN KEY (CustomerID)
        REFERENCES CUSTOMER(CustomerID) ON DELETE RESTRICT
);

COMMENT ON TABLE CONFIRMATION_SEND IS '確認状送付イベント';
COMMENT ON COLUMN CONFIRMATION_SEND.ConfirmationID IS '確認状ID';
COMMENT ON COLUMN CONFIRMATION_SEND.InvoiceID IS '請求書ID';
COMMENT ON COLUMN CONFIRMATION_SEND.CustomerID IS '顧客ID';
COMMENT ON COLUMN CONFIRMATION_SEND.SendDateTime IS '送付日時';
COMMENT ON COLUMN CONFIRMATION_SEND.SendMethod IS '送付方法';

-- ================================================
-- インデックス（パフォーマンス最適化）
-- ================================================

-- 請求書インデックス
CREATE INDEX IDX_INVOICE_CUSTOMER ON INVOICE(CustomerID);
CREATE INDEX IDX_INVOICE_DUEDATE ON INVOICE(DueDate);
CREATE INDEX IDX_INVOICE_NUMBER ON INVOICE(InvoiceNumber);

-- 請求書送付イベントインデックス
CREATE INDEX IDX_INVOICE_SEND_CUSTOMER ON INVOICE_SEND(CustomerID);
CREATE INDEX IDX_INVOICE_SEND_INVOICE ON INVOICE_SEND(InvoiceID);
CREATE INDEX IDX_INVOICE_SEND_DATETIME ON INVOICE_SEND(SendDateTime);

-- 入金イベントインデックス
CREATE INDEX IDX_PAYMENT_CUSTOMER ON PAYMENT(CustomerID);
CREATE INDEX IDX_PAYMENT_INVOICE ON PAYMENT(InvoiceID);
CREATE INDEX IDX_PAYMENT_DATETIME ON PAYMENT(PaymentDateTime);

-- 確認状送付イベントインデックス
CREATE INDEX IDX_CONFIRMATION_SEND_CUSTOMER ON CONFIRMATION_SEND(CustomerID);
CREATE INDEX IDX_CONFIRMATION_SEND_INVOICE ON CONFIRMATION_SEND(InvoiceID);
CREATE INDEX IDX_CONFIRMATION_SEND_DATETIME ON CONFIRMATION_SEND(SendDateTime);
